# cnvetti

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  HISTORY.rst  LICENSE.md  README.md  build.rs
.travis/: build.sh  install_deps.sh  test.sh
cmake/: GetGitRevisionDescription.cmake  version.cpp.in
cnvetti/: Cargo.toml
cnvetti/src/: cli.yaml  main.rs  quick_pool_build_model.rs  quick_pool_call.rs  quick_wis_build_model.rs  quick_wis_call.rs
conda/: build.sh  meta.yaml
core/: CMakeLists.txt
core/include/cnvetti/: contig_selection.h  histo_stats.h  interval_tree.h  program_options.h  segmentation.h  utils.h  version.h
core/src/: CMakeLists.txt  contig_selection.cpp  histo_stats.cpp  main.cpp  main_background.cpp  main_coverage.cpp  main_join.cpp  main_normalize.cpp  main_peaks.cpp  main_ratio.cpp  main_segment.cpp  main_summaries.cpp  program_options.cpp  segmentation_haar.cpp  segmentation_utils.cpp  test_seg_haar.cpp  utils.cpp
lib-coverage/: Cargo.toml
lib-coverage/src/: agg.rs  lib.rs  options.rs  piles.rs  reference.rs
lib-debias/: Cargo.toml
lib-discover/: Cargo.toml
lib-filter/: Cargo.toml
lib-genotype/: Cargo.toml
lib-genotype/src/: gt_seg_ovl.rs  gt_xhmm.rs  lib.rs  options.rs  ranges.rs
lib-merge-cov/: Cargo.toml
lib-merge-cov/src/: lib.rs  options.rs
lib-merge-seg/: Cargo.toml
lib-merge-seg/src/: lib.rs  options.rs
lib-mod-cov/: Cargo.toml
lib-mod-cov/src/: cov_pool.rs  cov_wis.rs  lib.rs  options.rs
lib-model-pool/: Cargo.toml
lib-model-pool/src/: lib.rs  options.rs
lib-model-wis/: Cargo.toml
lib-model-wis/src/: lib.rs  options.rs
lib-normalize/: Cargo.toml
lib-normalize/src/: correct_binned.rs  emrc.rs  lib.rs  options.rs  shared.rs  uncorrected.rs
lib-ratio/: Cargo.toml
lib-ratio/src/: lib.rs  options.rs
lib-segment/: Cargo.toml
lib-segment/src/: lib.rs  options.rs  seg_haar.rs  seg_wisexome.rs  seg_xhmm.rs  shared.rs
lib-shared/: Cargo.toml
lib-shared/src/: bam_utils.rs  bcf_utils.rs  lib.rs  regions.rs  stats.rs
lib-visualize/: Cargo.toml
lib-visualize/src/: lib.rs  options.rs
scripts/: cnvetti-cov-to-igv.sh  cnvetti-merge-samples.sh  cnvetti-profiles-to-igv.sh  cnvetti_plot.R  cnvetti_plot.yaml  cov_vs_seg.gnuplot
src/: cli.yaml  lib.rs  main.rs
src/cli/: coverage.rs  mod.rs  options.rs
src/cli/call/: mod.rs  options.rs
src/cli/cohort_stats/: mod.rs  options.rs
src/cli/coverage/: agg.rs  bcf_sink.rs  mod.rs  options.rs  piles.rs  reference.rs  regions.rs  summary.rs  yank_yard.txt
src/cli/normalize/: binned_gc.rs  mod.rs  options.rs  r_scripts.rs  shared.rs
src/cli/segment/: math.rs  mod.rs  options.rs  seg_haar.rs  seg_utils.rs
src/cli/shared/: lowess.rs  math.rs  mod.rs
src/cli/shortcuts/: mod.rs  options.rs
src/cli/wisexome/: mod.rs  options.rs
