[package]
name = "cnvetti"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]

[dependencies]
bio = "*"
chrono = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
histogram = "*"
quick-error = "*"
regex = "*"
#rust-htslib = {git = "https://github.com/rust-bio/rust-htslib.git", branch = "master" }
rust-htslib = {path = "../rust-htslib"}
rust-segment = { path = "../rust-segment" }
separator = "*"
shlex = "*"
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "*"
slog-async = "*"
statrs = "*"
tempdir = "*"

[build-dependencies]
git-build-version = "*"
