[package]
name = "cnvetti"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
error-chain = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "*"
slog-async = "*"
