[package]
name = "cnvetti"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
error-chain = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
rayon = "*"
slog-term = "*"
slog-async = "*"
tempdir = "*"

lib-coverage = { path = "../lib-coverage" }
lib-model-wis = { path = "../lib-model-wis" }
lib-merge-cov = { path = "../lib-merge-cov" }
lib-normalize = { path = "../lib-normalize" }
lib-shared = { path = "../lib-shared" }
