[package]
name = "cnvetti"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
error-chain = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
rayon = "*"
slog-term = "*"
slog-async = "*"
tempdir = "*"

lib-coverage = { path = "../lib-coverage" }
lib-genotype = { path = "../lib-genotype" }
lib-merge-cov = { path = "../lib-merge-cov" }
lib-mod-cov = { path = "../lib-mod-cov" }
lib-model-pool = { path = "../lib-model-pool" }
lib-model-wis = { path = "../lib-model-wis" }
lib-normalize = { path = "../lib-normalize" }
lib-ratio = { path = "../lib-ratio" }
lib-segment = { path = "../lib-segment" }
lib-shared = { path = "../lib-shared" }
lib-visualize = { path = "../lib-visualize" }
