[package]
name = "lib-coverage"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]

[dependencies]
chrono = "*"
bio = "*"
error-chain = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
rust-htslib = { git = "https://github.com/holtgrewe/rust-htslib.git", branch = "feature/synced-reader" }
separator = "*"
shlex = "*"
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "*"
slog-async = "*"
strum = "*"
strum_macros = "*"

lib-shared = { path = "../lib-shared" }
