[package]
name = "lib-merge-cov"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]

[dependencies]
chrono = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
error-chain = "*"
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", branch = "master" }
separator = "*"
shlex = "*"
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "*"
slog-async = "*"

lib-shared = { path = "../lib-shared" }
