[package]
name = "lib-mod-cov"
version = "0.2.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]

[dependencies]
chrono = "*"
error-chain = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", rev = "9cf1c52" }
separator = "*"
shlex = "*"
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "*"
slog-async = "*"

lib-shared = { path = "../lib-shared" }
