[package]
name = "lib-segment"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]

[dependencies]
bio = { path = "../../rust-bio" }
chrono = "*"
error-chain = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
ordered-float = "*"
quantiles = "*"
rust-htslib = { path = "../../rust-htslib" }
rust-segment = { path = "../../rust-segment" }
separator = "*"
shlex = "*"
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "*"
slog-async = "*"
statrs = "*"
strum = "*"
strum_macros = "*"

lib-shared = { path = "../lib-shared" }
