[package]
name = "lib-shared"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]

[dependencies]
bio = { git = "https://github.com/holtgrewe/rust-bio", rev = "9217791" }
error-chain = "*"
regex = "*"
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", rev = "903e500" }
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
